<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_small"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textSize_large"
        android:layout_marginBottom="@dimen/margin_small"
        android:text="@string/text_title"
        android:gravity="center"
        />
    <EditText
        android:id="@+id/edit1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edit_hint1"
        android:layout_marginBottom="@dimen/margin_xsmall"
        android:inputType="numberDecimal" />
    <EditText
        android:id="@+id/edit2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edit_hint2"
        android:layout_marginBottom="@dimen/margin_small"
        android:inputType="numberDecimal" />
    <Button
        android:id="@+id/btn_plus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/plus"
        android:layout_marginBottom="@dimen/margin_xsmall"/>
    <Button
        android:id="@+id/btn_minus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/minus"
        android:layout_marginBottom="@dimen/margin_xsmall"/>
    <Button
        android:id="@+id/btn_multiply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/multiply"
        android:layout_marginBottom="@dimen/margin_xsmall"/>
    <Button
        android:id="@+id/btn_divide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/divide"
        android:layout_marginBottom="@dimen/margin_xsmall"/>
    <Button
        android:id="@+id/btn_mod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mod"
        android:layout_marginBottom="@dimen/margin_xsmall"/>
    <TextView
        android:id="@+id/text_result"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:textSize="@dimen/textSize_large"
        android:text="@string/text_result"
        android:textColor="@color/red"
        />
</LinearLayout>